--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -259,6 +259,8 @@
 
 %The main goal is that students use this progress report to schedule their work and allow supervisors an opportunity to comment on the approach taken by students and the level of progress made.
 
+\section{Requirements}
+
 	Using an agile methodology will be an important part of the development of this project as it provides a far superior work flow as opposed to far more static methodologies such as the waterfall method. This will result in an improved rate of work and the addition of currently undiscovered ideas. Although an agile methodology will be in use, the requirements of the project are still be fixed and all efforts will be devoted to ensuring that they are fulfilled.
 
 %Write about requirements
@@ -275,6 +277,8 @@
 
 %Write about lib choices for each part
 
+\section{Library Selection}
+
 	Parts of the engine will be handled by external libraries, an important property of these libraries is performance and modernness as well as cross platform capability. Ideally the libraries will be open source.
 
 	Rendering, physics, scripting and sound will be handled by external libraries and implemented in the game engine. For rendering and sound there are several choices: SDL, SFML, DirectX and OpenGL with a sound library. SDL is widely used and has very good performance but it is written in pure C so has no object oriented code and is therefore quite dated when compared to SFML. DirectX is only available on the windows and Xbox platforms and is therefore not ideal for this project as cross platform is a requirement. OpenGL with a sound library has the best performance of all of the options but is also the most difficult to use and both SDL and SFML wrap OpenGL and provide access to the context so would be better options.
@@ -285,7 +289,11 @@
 
 	As for scripting the game engine there are several options such as C\#, Javascript and Lua. For the purposes of this project, Lua is the best option due to it's simple binding process and powerful syntax. Many games use Lua as their embedded scripting language such as Garry's Mod, World of Warcraft, Angry Birds and many, many more.
 
+	For the UI an external library created to provide UI capabilities to SFML could be used such as SFGUI or TGUI. This will need binding for use in Lua which could prove to be challenging, however getting the minimum working example would not be too difficult. It may be better for the development time if only text rendering is implemented as other UI elements can be achieved using sprites.
+
 %Write what needs to be done and in what order 
+
+\section{Engine Design}
 
 	The first step to creating a game engine is to get each of the libraries working correctly in a single project. As the project will be completed in an agile fashion it may be difficult to know exactly what will be created and in what order, however, that does not mean that designs can be drawn up outlining potential solutions.
 
@@ -311,13 +319,9 @@
 
 	Lua script management will be entirely handled within the core of the game engine allowing for creating and removing objects, managing object behaviour, physics interactions, UI, the camera and more. The engine will be a completely open source and will be easily expandable and improvable by the community as a result.
 
-	For the UI an external library created to provide UI capabilities to SFML could be used such as SFGUI or TGUI. This will need binding for use in Lua which could prove to be challenging, however getting the minimum working example would not be too difficult. It may be better for the development time if only text rendering is implemented as other UI elements can be achieved using sprites.
-
 	Loading and saving of the game state should be integrated into the game engine to speed up development time for the game developer. Level loading should also be integrated, an external open source level editor application could be used for the creation of the levels, a json or other data file could then be loaded into the game engine reducing the development time even further. Settings should also be managed by the game allowing the Lua developer to load and save any required key value pairs using a provided API, by implementing these features in the game engine the game developer can focus more on the actual game rather than semantics.
 
 	Documentation is a requirement for people to be able to use the engine to create games effectively and helps to reduce the learning curve. Each part of the documentation should be completed after the completion of every Lua accessible feature to ensure that it is kept on top of. Some kind of automatic documentation tool could be used similar to that of Golang's GoDoc or Java's javadoc, this would allow for the the documentation to stay up to date given any changes to the underlying code. Well documented examples could mitigate the requirement for extensive documentation, however, both would be ideal.
-
-	%Design stuff 
 	
 	For the game engine to function well there are a number of required systems that must be incorporated into the core of the engine. There are 5 main elements, the window, the physics world, the resource manager, the gamestate manager and the Lua state. Designing the core of the engine to be robust and lightweight is important as anything that the game engine is used for will rely heavily upon it, the better the design the better the implementation.
 
@@ -384,6 +388,7 @@
 	Handling the components will be done by a system per component all handled by an ECS manager as is shown in \ref{fig:ECSManager1}
 
 	%how to run code
+	\section{Running}
 
 	Testing game code needs to be a simple process, to achieve this, calling the game engine from the command line with a single argument is the best approach as this will also allow for the dragging and dropping of Lua files onto the exe. This method also means that an IDE would be able to launch the game as though it was anything else.
 
@@ -431,7 +436,7 @@
 
 %setting and getting some information from the window
 
-   Interaction with the window through SFML allows for the user of the game engine to ensure that their game works on all resolutions.
+   Interaction with the window through SFML allows for the user of the game engine to ensure that their game works on all resolutions. Adding this to the Lua API also provides control to the lower level systems that would otherwise be fully inaccessible. 
 
 %Added sound to C++ then to Lua
 
@@ -445,12 +450,14 @@
 
     The animation class handles all of frames, settings and timing for all animations within the game engine, having a class handling all of this allows for various systems and processes to use the same code. The UI system could use the animation class just the same as the animatable class could. Seamless integration with Lua was required as animations are an important part of any game, ensuring that this was achieved was very difficult.
 
-	%Added b2d
-	%Created physics component and added it to Lua
+%Added b2d
+%Created physics component and added it to Lua
 
-	Box2D was added to the engine and the Lua. Binding the fixture definitions and body definitions was an interesting challenge as it was difficult to decide what the best method of doing it was. It was clear that using a table with only the required parameters was the best option, as having to use a large selection of setter functions would have been painful for the end developer.
+	Box2D was added to the engine and to the Lua API. Binding the fixture definitions and body definitions was an interesting challenge as it was difficult to decide what the best method of doing it was. It was clear that using a table with only the required parameters was the best option, as having to use a large selection of setter functions would have been painful for the end developer.
 
-	%show lua example
+	\lstinputlisting[style=C++, label={lst:implementation2}, caption={Example of creating a box2d physics component}, firstline=1, lastline=11]{codeSamples/implementation.lua}
+
+	As shown in listing~\ref{lst:implementation2} the Lua required to create a physics component is very simple and can easily be modified to allow for any situation. Allowing for the deletion of the bodies proved to be reasonably difficult as just removing the instance of the physics component was not enough, the body also had to be removed from the physics world. 
 
 %Did some work on the gamestate system
 %Designed and created the camera system
@@ -472,11 +479,9 @@
 	Implementation of the ECS manager and the component systems was mostly a case of copying and modifying existing code before deleting the old classes, the Lua API did not need to change very much. Adding the add component functions was trivial. All references to the old system have now been removed and replaced with their ECS counterparts.
 
 %Command line args added
-%created pong and realised circle physbox was a requirement
-%created snake
-%created fall
+%created snake, fall
 
-
+	In order for the engines features and performance to be showcased, a pair of examples were created with the intention of releasing them with the source code. First a simple example of snake was created to show examples of using key pressed hooks for user input, text rendering, resource management as well as the general style of coding in Lua. A second example, called fall, was also created to showcase the Box2D physics integration, performance and the camera system.
 
 %Documentation
 
